--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   Amateur Photographer
                 </div>
               </div>
-              <blockquote>&ldquo;The TrackPod is exactly what I need when I'm taking group photos on the fly. The portability ease of use of the product lets me focus on capturing valuable moments with my friends and family.&rdquo;</blockquote>
+              <blockquote>&ldquo;The TrackPod is exactly what I need when I'm taking solo photos on the fly. The portability and ease of use of the product lets me focus on capturing valuable moments of my personal life.&rdquo;</blockquote>
             </div>
           </div>
         </div>
