--- a/index.html
+++ b/index.html
@@ -515,6 +515,16 @@
               </p>
             </div>
           </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_11.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 10</a></h2>
+              <div class="meta mb-4">Mar 3, 2020</div>
+              <p>The TrackPod assembly was mounted on the tripod and full integration tests were performed for robustness and consistency. A brief demonstrative video of one of the tracking and image capture test can
+                 be seen <a href="https://youtu.be/f3XJFEq79OU">here</a>.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
