add blog update 11

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Intuitive User Interface</h2>
-            <p class="mb-4">A well designed interface means more time taking photos and less time reading documentation.</p>
+            <h2 class="text-black">Elegant Product Design</h2>
+            <p class="mb-4">A well designed product means more time taking photos and less time reading documentation. Plus, it's nice to look at.</p>
             <ul class="ul-check mb-5 list-unstyled success">
               <li>Designed with the user in mind using principles of cognitive ergonomics.</li>
               <li>Sleek and streamlined look constructed with high quality materials.</li>
@@ -522,6 +522,15 @@
               <div class="meta mb-4">Mar 3, 2020</div>
               <p>The TrackPod assembly was mounted on the tripod and full integration tests were performed for robustness and consistency. A brief demonstrative video of one of the tracking and image capture test can
                  be seen <a href="https://youtu.be/f3XJFEq79OU">here</a>.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_12.jpg" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 11</a></h2>
+              <div class="meta mb-4">Mar 5, 2020</div>
+              <p>The group centering feature was implemented and tested with 4 people in the camera frame. All the faces in the photo are detected and the algorithm determines the optimal position for the camera to be in to capture all subjects equally.
               </p>
             </div>
           </div>
