--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
     <div class="feature-big">
       <div class="container">
         <div class="row mb-5 site-section border-bottom">
-          <div class="col-lg-7">
-            <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
+          <div class="col-lg-6">
+            <iframe width="420" height="750" src="https://www.youtube.com/embed/56Csn7AHi-M?start=8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
+          <div class="col-lg-6 pl-lg-6 ml-auto mt-md-6">
             <h2 class="text-black">Elegant Product Design</h2>
             <p class="mb-4">A well designed product means more time taking photos and less time reading documentation. Plus, it's nice to look at.</p>
             <ul class="ul-check mb-5 list-unstyled success">
