--- a/index.html
+++ b/index.html
@@ -534,6 +534,14 @@
               </p>
             </div>
           </div>
+           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_13.jpg" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 12</a></h2>
+              <div class="meta mb-4">Mar 6, 2020</div>
+              <p>The group successfully completed the demo with Professor Andrew Kennings and Professor Behrad Khamesee. A group photo with Professor Andrew Kennings was captured to mark this moment. Minor improvements to the TrackPod will continue to be made until the symposium on March 13th, 2020. This is the final update that will be posted to this site.
+              </p>
+            </div>
         </div>
       </div>
     </div>
